# hillel-homework

./: .gitignore  LICENSE  README.md  zad-4.cpp  zad-5.cpp
zad6/: CMakeLists.txt  Main.qml  controller.cpp  controller.h  main.cpp  model.cpp  model.h
